--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2024"
 
 [dependencies]
 env_logger = "0.11.8"
+image = "0.25.6"
 log = "0.4.27"
+noise = "0.9.0"
 pixels = "0.15.0"
 rand = "0.9.2"
 winit = "0.30.12"
